// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test currenyc=kusams && txType=None && member length < 13 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/kusama.png",
          }
        }
        style={
          Object {
            "borderRadius": 75,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column-reverse",
            "marginLeft": 20,
            "paddingTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 17,
                    "fontStyle": "normal",
                  },
                  Object {
                    "color": "#888888",
                    "textAlign": "left",
                  },
                ]
              }
            >
              
              5
               
              KSM
            </Text>
          </View>
        </View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          address#2
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test currenyc=polkadot && txType=None && member length < 13 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/dot.png",
          }
        }
        style={
          Object {
            "borderRadius": 75,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column-reverse",
            "marginLeft": 20,
            "paddingTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 17,
                    "fontStyle": "normal",
                  },
                  Object {
                    "color": "#888888",
                    "textAlign": "left",
                  },
                ]
              }
            >
              
              10
               
              DOT
            </Text>
          </View>
        </View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          address#1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test member length > 13 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/dot.png",
          }
        }
        style={
          Object {
            "borderRadius": 75,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column-reverse",
            "marginLeft": 20,
            "paddingTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 17,
                    "fontStyle": "normal",
                  },
                  Object {
                    "color": "#888888",
                    "textAlign": "left",
                  },
                ]
              }
            >
              
              10
               
              DOT
            </Text>
          </View>
        </View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          1exaAg2VJRQby...3zo23R2T6EGdE
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test txType=Received 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/dot.png",
          }
        }
        style={
          Object {
            "borderRadius": 75,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column-reverse",
            "marginLeft": 20,
            "paddingTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 17,
                    "fontStyle": "normal",
                  },
                  Object {
                    "color": "#84D371",
                    "textAlign": "left",
                  },
                ]
              }
            >
              +
              10
               
              DOT
            </Text>
          </View>
        </View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          1exaAg2VJRQby...3zo23R2T6EGdE
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test txType=Sent 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/dot.png",
          }
        }
        style={
          Object {
            "borderRadius": 75,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column-reverse",
            "marginLeft": 20,
            "paddingTop": 5,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 17,
                    "fontStyle": "normal",
                  },
                  Object {
                    "color": "#F45252",
                    "textAlign": "left",
                  },
                ]
              }
            >
              -
              10
               
              DOT
            </Text>
          </View>
        </View>
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        >
          1exaAg2VJRQby...3zo23R2T6EGdE
        </Text>
      </View>
    </View>
  </View>
</View>
`;
